# anime-sama_downloader

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
anime_sama/: anime_sama.py  catalogue.py  config.py  custom_client.py  defautl_config.py  downloader.py  episode.py  main.py  season.py  utils.py
